syntax = "proto3";
package markets;


service Market {
    rpc getMarketData (MarketDataRequest) returns (MarketDataResponse);
}

message MarketDataRequest {
    string market = 1;
}

message MarketDataResponse {
    float price = 1;
}